# shout

./: .gitignore  ARCHITECTURE.md  BLOCKERS.md  BUILD_LOG.md  LESSONS.md  LICENSE  README.md  TO-DO.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: download-models.sh
src/: index.html  main.js  pill.html  styles.css
src-tauri/: BUILD_LOG.md  Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  ghost.rs  hotkey.rs  inject.rs  lib.rs  main.rs  models.rs  pipeline.rs
src-tauri/src/audio/: capture.rs  mod.rs  vad.rs
src-tauri/src/llm/: ollama.rs
src-tauri/src/pkm/: obsidian.rs
src-tauri/src/stt/: mod.rs  parakeet.rs  whisper.rs
src-tauri/tests/: ghost.rs  phase1.rs
