[package]
name = "shout"
version = "0.1.0"
description = "Local, self-hosted voice dictation"
authors = ["Jesse LeResche"]
edition = "2021"

[lib]
name = "shout_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
cpal = "0.18"
sherpa-onnx = { version = "1.13", default-features = false, features = ["static"] }
arboard = "3"
enigo = "0.6"
anyhow = "1"
